# tender-report

./: .gitignore  CLAUDE.md  README.md  _get_tenders.py  config.py  generate_tender_report.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_and_report.sh  scraper.py  storage.py  使用示例.py
src/: __init__.py  cli.py  data_manager.py  email_sender.py  fallback.py  industry_news.py  models.py  news_fetcher.py  pdf_generator.py  scraper.py  storage.py  urls.py  utils.py
tests/: test_data_manager.py  test_scraper.py  test_storage.py
